# Django-Social-Network

./: pyproject.toml
bookmarks/: db.sqlite3
bookmarks/account/: urls.py  views.py
bookmarks/account/templates/: base.html
bookmarks/account/templates/registration/: login.html
bookmarks/bookmarks/: settings.py
