[tool.poetry]
name = "Django social network"
version = "0.1.0"
description = "Learn project"
authors = ["IvanovIvan1900 <rTK}6+#HgB0o>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
